connect/tests/macros/switch/fail/catch_all_requires_handler.stderr
error: unexpected end of input, _ case requires a handler block
 --> tests/macros/switch/fail/catch_all_requires_handler.rs:9:26
  |
9 |         switch!(step { _ })
  |                          ^
